src/multifloats_c.h

typedef struct { double hi, lo; } float64x2_t;
/* Arithmetic */
MULTIFLOATS_API float64x2_t adddd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API float64x2_t subdd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API float64x2_t muldd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API float64x2_t divdd(float64x2_t a, float64x2_t b);
/* Unary */
MULTIFLOATS_API float64x2_t negdd(float64x2_t a);
MULTIFLOATS_API float64x2_t fabsdd(float64x2_t a);
MULTIFLOATS_API float64x2_t sqrtdd(float64x2_t a);
/* Binary */
MULTIFLOATS_API float64x2_t fmindd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API float64x2_t fmaxdd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API float64x2_t hypotdd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API float64x2_t powdd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API float64x2_t fmoddd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API float64x2_t fdimdd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API float64x2_t copysigndd(float64x2_t a, float64x2_t b);
/* Exponential / logarithmic */
MULTIFLOATS_API float64x2_t expdd(float64x2_t a);
MULTIFLOATS_API float64x2_t logdd(float64x2_t a);
MULTIFLOATS_API float64x2_t log10dd(float64x2_t a);
/* Trigonometric */
MULTIFLOATS_API float64x2_t sindd(float64x2_t a);
MULTIFLOATS_API float64x2_t cosdd(float64x2_t a);
MULTIFLOATS_API float64x2_t tandd(float64x2_t a);
MULTIFLOATS_API float64x2_t asindd(float64x2_t a);
MULTIFLOATS_API float64x2_t acosdd(float64x2_t a);
MULTIFLOATS_API float64x2_t atandd(float64x2_t a);
MULTIFLOATS_API float64x2_t atan2dd(float64x2_t a, float64x2_t b);
/* Hyperbolic */
MULTIFLOATS_API float64x2_t sinhdd(float64x2_t a);
MULTIFLOATS_API float64x2_t coshdd(float64x2_t a);
MULTIFLOATS_API float64x2_t tanhdd(float64x2_t a);
MULTIFLOATS_API float64x2_t asinhdd(float64x2_t a);
MULTIFLOATS_API float64x2_t acoshdd(float64x2_t a);
MULTIFLOATS_API float64x2_t atanhdd(float64x2_t a);
/* Error functions. erfcxdd is the scaled complementary error function
 *   erfcxdd(x) = exp(x^2) * erfcdd(x)
 * (standard name in Faddeeva/Julia/SciPy; Fortran calls it erfc_scaled). */
MULTIFLOATS_API float64x2_t erfdd(float64x2_t a);
MULTIFLOATS_API float64x2_t erfcdd(float64x2_t a);
/* Comparison (return int: 1 = true, 0 = false) */
MULTIFLOATS_API int eqdd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API int ltdd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API int ledd(float64x2_t a, float64x2_t b);