test/bench_c.f90

program bench_c_wrappers
  ! Three-way benchmark: quad precision (qp) vs Fortran multifloats (mf)
  ! vs C-ABI wrappers around C++ multifloats (cmf).
  !
  ! The C wrappers return float64x2_t (16 bytes) by value via the platform C
  ! ABI, which on ARM64 uses d0/d1 registers — no hidden pointer. This
  ! isolates the cost of gfortran's derived-type ABI vs the C register-
  ! return convention for the same underlying DD arithmetic.
  use multifloats
  use, intrinsic :: iso_fortran_env, only: int64, real64
  use, intrinsic :: iso_c_binding,   only: c_double, c_int
  implicit none

  integer, parameter :: qp = 16
  integer, parameter :: dp = 8

  ! C-interoperable mirror of float64x2_t.
  type, bind(c) :: float64x2_t
    real(c_double) :: hi, lo
  end type float64x2_t

  ! ================================================================
  ! C wrapper interfaces (pass & return by value)
  ! ================================================================
  interface
    ! Arithmetic
    type(float64x2_t) function c_dd_add(a, b) bind(c, name='adddd')
      import :: float64x2_t
      type(float64x2_t), value :: a, b
    end function
    type(float64x2_t) function c_dd_sub(a, b) bind(c, name='subdd')
      import :: float64x2_t
      type(float64x2_t), value :: a, b
    end function
    type(float64x2_t) function c_dd_mul(a, b) bind(c, name='muldd')
      import :: float64x2_t
      type(float64x2_t), value :: a, b
    end function
    type(float64x2_t) function c_dd_div(a, b) bind(c, name='divdd')
      import :: float64x2_t
      type(float64x2_t), value :: a, b
    end function
    ! Unary
    type(float64x2_t) function c_dd_neg(a) bind(c, name='negdd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_abs(a) bind(c, name='fabsdd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_sqrt(a) bind(c, name='sqrtdd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    ! Binary
    type(float64x2_t) function c_dd_fmin(a, b) bind(c, name='fmindd')
      import :: float64x2_t
      type(float64x2_t), value :: a, b
    end function
    type(float64x2_t) function c_dd_fmax(a, b) bind(c, name='fmaxdd')
      import :: float64x2_t
      type(float64x2_t), value :: a, b
    end function
    type(float64x2_t) function c_dd_hypot(a, b) bind(c, name='hypotdd')
      import :: float64x2_t
      type(float64x2_t), value :: a, b
    end function
    type(float64x2_t) function c_dd_fdim(a, b) bind(c, name='fdimdd')
      import :: float64x2_t
      type(float64x2_t), value :: a, b
    end function
    type(float64x2_t) function c_dd_fmod(a, b) bind(c, name='fmoddd')
      import :: float64x2_t
      type(float64x2_t), value :: a, b
    end function
    type(float64x2_t) function c_dd_copysign(a, b) bind(c, name='copysigndd')
      import :: float64x2_t
      type(float64x2_t), value :: a, b
    end function
    ! Transcendental
    type(float64x2_t) function c_dd_exp(a) bind(c, name='expdd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_log(a) bind(c, name='logdd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_log10(a) bind(c, name='log10dd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_pow(a, b) bind(c, name='powdd')
      import :: float64x2_t
      type(float64x2_t), value :: a, b
    end function
    type(float64x2_t) function c_dd_sin(a) bind(c, name='sindd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_cos(a) bind(c, name='cosdd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_tan(a) bind(c, name='tandd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_asin(a) bind(c, name='asindd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_acos(a) bind(c, name='acosdd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_atan(a) bind(c, name='atandd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_atan2(a, b) bind(c, name='atan2dd')
      import :: float64x2_t
      type(float64x2_t), value :: a, b
    end function
    type(float64x2_t) function c_dd_sinh(a) bind(c, name='sinhdd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_cosh(a) bind(c, name='coshdd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_tanh(a) bind(c, name='tanhdd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_asinh(a) bind(c, name='asinhdd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_acosh(a) bind(c, name='acoshdd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_atanh(a) bind(c, name='atanhdd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_erf(a) bind(c, name='erfdd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    type(float64x2_t) function c_dd_erfc(a) bind(c, name='erfcdd')
      import :: float64x2_t
      type(float64x2_t), value :: a
    end function
    ! Comparison
    integer(c_int) function c_dd_lt(a, b) bind(c, name='ltdd')
      import :: float64x2_t, c_int
      type(float64x2_t), value :: a, b
    end function
    integer(c_int) function c_dd_le(a, b) bind(c, name='ledd')
      import :: float64x2_t, c_int
      type(float64x2_t), value :: a, b
    end function
    integer(c_int) function c_dd_eq(a, b) bind(c, name='eqdd')
      import :: float64x2_t, c_int
      type(float64x2_t), value :: a, b
    end function
  end interface

  ! ================================================================
  ! Data
  ! ================================================================
  integer, parameter :: N = 1024
  integer, parameter :: REPS_FAST = 400
  integer, parameter :: REPS_TRIG = 40
  integer, parameter :: REPS_VERY_SLOW = 4

  real(qp), allocatable :: q1(:), q2(:), qpos(:), qsmall(:), qbnd(:), qres(:)
  type(float64x2), allocatable :: f1(:), f2(:), fpos(:), fsmall(:), fbnd(:), fres(:)
  type(float64x2_t), allocatable :: c1(:), c2(:), cpos(:), csmall(:), cbnd(:), cres(:)

  real(qp) :: q_sink = 0.0_qp
  real(dp) :: f_sink = 0.0_dp
  real(dp) :: c_sink = 0.0_dp

  call init_data()

  print '(a)', "================================================================"
  print '(a)', " Three-way benchmark: qp vs Fortran-mf vs C-wrapped-mf"
  print '(a,i0)', " N=", N
  print '(a)', "================================================================"
  print '(a)', ""
  print '(a)', &
    " op                      n_ops     qp [s]     mf [s]    cmf [s]  qp/mf   qp/cmf  mf/cmf"
  print '(a)', &
    " --------------------------------------------------------------------------------------"

  call bench_arith()
  call bench_unary()
  call bench_binary()
  call bench_exp_log()
  call bench_trig()
  call bench_inv_trig()
  call bench_hyperbolic()
  call bench_inv_hyperbolic()
  call bench_erf()

  print '(a)', &
    " --------------------------------------------------------------------------------------"
  print '(a,es11.3,a,es11.3,a,es11.3)', &
    " sinks: qp=", real(q_sink, dp), " mf=", f_sink, " cmf=", c_sink

contains

  ! ================================================================
  ! Plumbing
  ! ================================================================

  type(float64x2) function to_f64x2(q)
    real(qp), intent(in) :: q
    real(dp) :: h, l, s, b
    h = real(q, dp)
    l = real(q - real(h, qp), dp)
    s = h + l
    b = s - h
    to_f64x2%limbs(1) = s
    to_f64x2%limbs(2) = l - b
  end function

  type(float64x2_t) function mf_to_dd(f)
    type(float64x2), intent(in) :: f
    mf_to_dd%hi = f%limbs(1)
    mf_to_dd%lo = f%limbs(2)
  end function

  subroutine init_data()
    integer :: i
    real(dp) :: r(3)
    allocate(q1(N), q2(N), qpos(N), qsmall(N), qbnd(N), qres(N))
    allocate(f1(N), f2(N), fpos(N), fsmall(N), fbnd(N), fres(N))
    allocate(c1(N), c2(N), cpos(N), csmall(N), cbnd(N), cres(N))
    call random_seed()
    do i = 1, N
      call random_number(r)
      q1(i) = real((r(1) - 0.5_dp) * 8.0_dp + sign(0.25_dp, r(1) - 0.5_dp), qp)
      q2(i) = real((r(2) - 0.5_dp) * 8.0_dp + sign(0.25_dp, r(2) - 0.5_dp), qp)
      qpos(i) = real(0.1_dp + 9.9_dp * r(1), qp)
      qsmall(i) = real((r(2) - 0.5_dp) * 6.0_dp, qp)
      qbnd(i) = real((r(3) - 0.5_dp) * 1.8_dp, qp)
    end do
    do i = 1, N
      f1(i) = to_f64x2(q1(i));     c1(i) = mf_to_dd(f1(i))
      f2(i) = to_f64x2(q2(i));     c2(i) = mf_to_dd(f2(i))
      fpos(i) = to_f64x2(qpos(i)); cpos(i) = mf_to_dd(fpos(i))
      fsmall(i) = to_f64x2(qsmall(i)); csmall(i) = mf_to_dd(fsmall(i))
      fbnd(i) = to_f64x2(qbnd(i)); cbnd(i) = mf_to_dd(fbnd(i))
    end do
  end subroutine

  subroutine tick(t)
    integer(int64), intent(out) :: t
    call system_clock(t)
  end subroutine

  real(real64) function elapsed(t0)
    integer(int64), intent(in) :: t0
    integer(int64) :: t1, rate
    call system_clock(t1, rate)
    elapsed = real(t1 - t0, real64) / real(rate, real64)
  end function

  ! NOINLINE drains — one per leg.
  subroutine qfeed(q_in)
    !GCC$ ATTRIBUTES NOINLINE :: qfeed
    real(qp), intent(inout) :: q_in(:)
    real(dp) :: s
    integer :: i
    s = 0.0_dp
    do i = 1, size(qres)
      s = s + real(qres(i), dp)
    end do
    q_in(1) = q_in(1) + real(s, qp) * 1.0e-30_qp
    q_sink = q_sink + real(s, qp)
  end subroutine

  subroutine ffeed(f_in)
    !GCC$ ATTRIBUTES NOINLINE :: ffeed
    type(float64x2), intent(inout) :: f_in(:)
    real(dp) :: s
    integer :: i
    s = 0.0_dp
    do i = 1, size(fres)
      s = s + fres(i)%limbs(1)
    end do
    f_in(1)%limbs(1) = f_in(1)%limbs(1) + s * 1.0e-30_dp
    f_sink = f_sink + s
  end subroutine

  subroutine cfeed(c_in)
    !GCC$ ATTRIBUTES NOINLINE :: cfeed
    type(float64x2_t), intent(inout) :: c_in(:)
    real(dp) :: s
    integer :: i
    s = 0.0_dp
    do i = 1, size(cres)
      s = s + cres(i)%hi
    end do
    c_in(1)%hi = c_in(1)%hi + s * 1.0e-30_dp
    c_sink = c_sink + s
  end subroutine

  subroutine report3(name, n_ops, tq, tf, tc)
    character(*), intent(in) :: name
    integer(int64), intent(in) :: n_ops
    real(real64), intent(in) :: tq, tf, tc
    real(real64) :: sq, sc, mc
    sq = merge(tq / tf, 0.0_real64, tf > 0)
    sc = merge(tq / tc, 0.0_real64, tc > 0)
    mc = merge(tf / tc, 0.0_real64, tc > 0)
    write(*, '(1x,a22,1x,i10,1x,f9.4,1x,f9.4,1x,f9.4,1x,f7.2,"x",1x,f7.2,"x",1x,f7.2,"x")') &
        name, n_ops, tq, tf, tc, sq, sc, mc
  end subroutine

  ! ================================================================
  ! Benchmark sections
  ! ================================================================

  subroutine bench_arith()
    integer :: i, r
    integer(int64) :: t0, n_ops
    real(real64) :: tq, tf, tc
    n_ops = int(N, int64) * int(REPS_FAST, int64)
